[package]
name = "nmo-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nmo_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
nemo = { git = "https://github.com/knowsys/nemo.git" }
